feat(user): add new endpoint to check user id using user account
